--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,9 @@ Date: 2016-05-24
 Author: Rebaudo Francois (IRD, UMR EGCE, Univ.ParisSud-CNRS-IRD-
     Univ.ParisSaclay)
 Maintainer: Rebaudo Francois <francois.rebaudo@ird.fr>
-Description: xxx
+Description: A set of functions to ease quantifying the relationships between developmental
+    rate and temperature. The package comprises a set of models and estimated paramaters
+    borrowed from a vaste literature review in ectotherms.
 License: GPL-2
 LazyData: TRUE
 RoxygenNote: 5.0.1
