--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Author: Rebaudo Francois (IRD, UMR EGCE, Univ.ParisSud-CNRS-IRD-
 Maintainer: Rebaudo Francois <francois.rebaudo@ird.fr>
 Description: A set of functions to ease quantifying the relationships between developmental
     rate and temperature. The package comprises a set of models and estimated parameters
-    borrowed from a vaste literature review in ectotherms.
+    borrowed from a literature review in ectotherms.
 License: GPL-2
 LazyData: TRUE
 RoxygenNote: 5.0.1
