--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,6 @@ Description: A set of functions to ease quantifying the relationships between de
 License: GPL-2
 LazyData: TRUE
 RoxygenNote: 5.0.1
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
