--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Quantify Relationships Between Developmental Rate and Temperature in
     Ectotherms
 Version: 0.1.0
 Date: 2016-08-26
-Author: Rebaudo Francois (IRD, UMR EGCE, Univ.ParisSud-CNRS-IRD-
+Author: Rebaudo Francois, Quentin Struelens (IRD, UMR EGCE, Univ.ParisSud-CNRS-IRD-
     Univ.ParisSaclay)
 Maintainer: Rebaudo Francois <francois.rebaudo@ird.fr>
 Description: A set of functions to ease quantifying the relationships between developmental
