--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: devRate
 Type: Package
-Title: Quantify Relationships Between Developmental Rate and Temperature in
+Title: Quantify Relationship Between Developmental Rate and Temperature in
     Ectotherms
 Version: 0.1.0
 Date: 2016-08-29
