--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,9 @@ Date: 2016-08-29
 Authors@R: c(person("Francois", "Rebaudo", role = c("aut", "cre"),
     email = "francois.rebaudo@ird.fr"),
     person("Quentin", "Struelens", role = "aut"))
-Author: Francois Rebaudo [aut, cre] (IRD, UMR EGCE, Univ.ParisSud-CNRS-IRD-Univ.ParisSaclay),
-    Quentin Struelens [aut] (IRD, UMR EGCE, Univ.ParisSud-CNRS-IRD-Univ.ParisSaclay)
-Maintainer: Rebaudo Francois <francois.rebaudo@ird.fr>
+Author: Francois Rebaudo [aut, cre],
+    Quentin Struelens [aut]
+Maintainer: Francois Rebaudo <francois.rebaudo@ird.fr>
 Description: A set of functions to ease quantifying the relationship between developmental
     rate and temperature. The package comprises a set of models and estimated parameters
     borrowed from a literature review in ectotherms.
