--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,5 +17,6 @@ License: GPL-2
 LazyData: TRUE
 RoxygenNote: 5.0.1
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
