new functions in export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(compDifDays)
 export(compDifDaysDf)
+export(dRGetMetrics)
+export(dRGetMetricsInfo)
 export(devRateFind)
 export(devRateIBM)
 export(devRateIBMPlot)
