--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(dRGetMetricsInfo)
 export(devRateFind)
 export(devRateIBM)
 export(devRateIBMPlot)
+export(devRateIBMdataBase)
 export(devRateIBMgen)
 export(devRateInfo)
 export(devRateMap)
