--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,7 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 R/devRate_equations\.R
+R/devRate_tpc\.R
 R/devRate_forRstudioUsers\.R
 ^data/.*\.csv$
 cran-comments\.md
