--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(person("Francois", "Rebaudo", role = c("aut", "cre"),
 Author: Francois Rebaudo [aut, cre],
     Quentin Struelens [aut]
 Maintainer: Francois Rebaudo <francois.rebaudo@ird.fr>
-Description: A set of functions to ease quantifying the relationship between development
+Description: A set of functions to quantify the relationship between development
     rate and temperature. The package comprises a set of models and estimated parameters
     borrowed from a literature review in ectotherms (mostly arthropods).
 License: GPL-2
