Revision3- AEQ4: typos and grammatical errors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: devRate
 Type: Package
-Title: Quantify Relationship Between Development Rate and Temperature in
+Title: Quantify the Relationship Between Development Rate and Temperature in
     Ectotherms
 Version: 0.1.3
 Date: 2017-07-31
