Revision4-R3Q6-2: url and bugReports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,5 @@ Suggests: knitr,
     rmarkdown,
     testthat
 VignetteBuilder: knitr
+URL: https://github.com/frareb/devRate/
+BugReports: https://github.com/frareb/devRate/issues
