new function devRateIBMparam

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(devRateIBM)
 export(devRateIBMPlot)
 export(devRateIBMdataBase)
 export(devRateIBMgen)
+export(devRateIBMparam)
 export(devRateInfo)
 export(devRateMap)
 export(devRateModel)
