add devRateQlBio and devRateQlStat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,5 @@ export(devRateModel)
 export(devRatePlot)
 export(devRatePlotInfo)
 export(devRatePrint)
+export(devRateQlBio)
+export(devRateQlStat)
