--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(devRateIBMparam)
 export(devRateInfo)
 export(devRateMap)
 export(devRateModel)
+export(devRateModelAll)
 export(devRatePlot)
 export(devRatePlotInfo)
 export(devRatePrint)
