new set of tools for Helicoverpa armigera within the framework of the ACOMPLI project.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,3 +17,7 @@ export(devRatePlotInfo)
 export(devRatePrint)
 export(devRateQlBio)
 export(devRateQlStat)
+export(ha_bartekova2006)
+export(ha_jallow2001)
+export(ha_mironidis2008_ls)
+export(ha_mironidis2008_nls)
