--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,6 @@ export(devRatePlotInfo)
 export(devRatePrint)
 export(devRateQlBio)
 export(devRateQlStat)
-export(ha_NoorulAne2018_ls)
-export(ha_NoorulAne2018_nls)
 export(ha_bartekova2006)
 export(ha_foley1981)
 export(ha_jallow2001)
@@ -26,3 +24,6 @@ export(ha_kay1981_ls)
 export(ha_kay1981_nls)
 export(ha_mironidis2008_ls)
 export(ha_mironidis2008_nls)
+export(ha_noorulane2018_ls)
+export(ha_noorulane2018_nls)
+export(ha_qureshi1999_ls)
